--- a/index.html
+++ b/index.html
@@ -1,51 +1,314 @@
 <!DOCTYPE html>
 <html lang="pt br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BoxPets</title>
-    <link rel="stylesheet" href="style.css">
-
-
-    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1">
-</head>
-<body>
-    <header>
-        <nav>
-            <a class="logo" href="">BoxPets</a>
-            <div class="mobile-menu">
-                <div class="line1"></div>
-                <div class="line2"></div>
-                <div class="line3"></div>
-               
-            </div>
-            <ul class="nav-list">
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Empresa</a></li>
-                <li><a href="#">Ongs</a></li>
-                <li><a href="#">Ajuda</a></li>
-            </ul>
-        </nav>
-    </header>
-    <section class=" home">
-        <div>
-            <video class="video" src="video.mp4" autoplay muted loop></video>
-            </div>
-
-        <div class="content">
-            <h1>BoxPets.<br><span>Tudo pra você</span></h1>
-            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            <button href="#">Login</button>
-
-        </div>
-        <div class="media-icons">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a> 
-            <a href="#"><i class="fab fa-twitter"></i></a>  
-        </div>
-
-    </section>
-    <script src="mobile-navbar.js"></script>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>BoxPets</title>
     
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<link rel="stylesheet" href="style.css">
+
+
+	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1">
+</head>
+
+<body>
+	
+	<header>
+		<nav>
+			<a class="logo" href="">BoxPets</a>
+			<div class="mobile-menu">
+				<div class="line1"></div>
+				<div class="line2"></div>
+				<div class="line3"></div>
+
+			</div>
+			<ul class="nav-list">
+				<li><a href="#">Inicio</a></li>
+				<li><a href="#">Empresa</a></li>
+				<li><a href="#">Ongs</a></li>
+				<li><a href="#">Ajuda</a></li>
+			</ul>
+		</nav>
+	</header>
+	<section class=" home">
+		<div>
+			<video class="video" src="video.mp4" autoplay muted loop></video>
+		</div>
+
+		<div class="content">
+			<h1>BoxPets.<br><span>Tudo pra você</span></h1>
+			<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+				dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+				ex ea commodo consequat.</p>
+			<button href="#">Login</button>
+
+		</div>
+		<div class="media-icons">
+			<a href="#"><i class="fa-brands fa-instagram"></i> </a>
+			a href="#"><i class="fa-brands fa-facebook"></i> <
+			<a href="#"><i class="fab fa-twitter"></i>  </a>
+		</div>
+
+	</section>
+
+	<section>
+		<div class="container">
+			<div class="card">
+				<div class="content">
+					<div class="imgBx">
+						<img src="BANHOTOSA.png">
+					</div>
+					<div class="contentBx">
+						<h3>Banho&tosa<br><span>Os melhores serviços</span></h3>
+					</div>
+				</div>
+				<ul class="sci">
+					<li>
+						<a href="">gatos</a>
+					</li>
+					<li>
+						<a href="">cachorros</a>
+					</li>
+					<li>
+						<a href="">outros</a>
+					</li>
+				</ul>
+			</div>
+			<div class="card">
+				<div class="content">
+					<div class="imgBx">
+						<img src="VETERINARIO.png">
+					</div>
+					<div class="contentBx">
+						<h3>Veterinario<br><span>Happy Birthday</span></h3>
+					</div>
+				</div>
+				<ul class="sci">
+					<li>
+						<a href="">happy</a>
+					</li>
+					<li>
+						<a href="">birth</a>
+					</li>
+					<li>
+						<a href="">day</a>
+					</li>
+				</ul>
+			</div>
+			<div class="card">
+				<div class="content">
+					<div class="imgBx">
+						<img src="CRECHE.png">
+					</div>
+					<div class="contentBx">
+						<h3>Creche<br><span>Happy Birthday</span></h3>
+					</div>
+				</div>
+				<ul class="sci">
+					<li>
+						<a href="">happy</a>
+					</li>
+					<li>
+						<a href="">birth</a>
+					</li>
+					<li>
+						<a href="">day</a>
+					</li>
+				</ul>
+			</div>
+			<div class="card">
+				<div class="content">
+					<div class="imgBx">
+						<img src="PASSEIO (2).png">
+					</div>
+					<div class="contentBx">
+						<h3>Veterinario<br><span>Happy Birthday</span></h3>
+					</div>
+				</div>
+				<ul class="sci">
+					<li>
+						<a href="">happy</a>
+					</li>
+					<li>
+						<a href="">birth</a>
+					</li>
+					<li>
+						<a href="">day</a>
+					</li>
+				</ul>
+			</div>
+			<div class="card">
+				<div class="content">
+					<div class="imgBx">
+						<img src="ADESTRAMENTO.png">
+					</div>
+					<div class="contentBx">
+						<h3>Veterinario<br><span>Happy Birthday</span></h3>
+					</div>
+				</div>
+				<ul class="sci">
+					<li>
+						<a href="">happy</a>
+					</li>
+					<li>
+						<a href="">birth</a>
+					</li>
+					<li>
+						<a href="">day</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</section>
+
+	<!-- about -->
+	<section>
+
+		<div class="about" id="about">
+			<div class="about_main">
+				<div class="row">
+					<div class="image">
+						<img src="gatinhos.jpg">
+					</div>
+
+					<div class="about_text">
+						<h1><span>Adota</span>Pet</h1>
+						<h3>com todo o amor para vcocê</h3>
+						<p>
+							Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+							Lorem Ipsum has been the
+							industry's standard dummy text ever since the 1500s, when an unknown printer took
+							a galley of type and scrambled it to make a type specimen book.
+						</p>
+						<a href="#" class="about_btn">Veja</a>
+					</div>
+				</div>
+
+			</div>
+	</section>
+
+	<!--card-->
+
+	<main class="cards">
+        <section class="card contact">
+            <div class="icon">
+                <img src="assets/Chat.png" alt="Contact us.">
+            </div>
+            <h3>Contact us.</h3>
+            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+            <button>Learn More</button>
+        </section>
+        <section class="card shop">
+            <div class="icon">
+                <img src="assets/Bag.png" alt="Shop here.">
+            </div>
+            <h3>Shop here.</h3>
+            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+            <button>Learn More</button>
+        </section>
+        <section class="card about">
+            <div class="icon">
+                <img src="assets/Play.png" alt="About us.">
+            </div>
+            <h3>About us.</h3>
+            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+            <button>Learn More</button>
+        </section>
+    </main>
+
+	<!--footer-->
+	
+	<footer>
+		
+		<div id="footer_content">
+			<div id="footer_contacts">
+				<h1>logo</h1>
+				<p>Tudo aqui</p>
+
+				<div id="footer_midia">
+				<a href="#" class="footer-link" id="instagram">
+				<i class="fa-brands fa-instagram"></i>
+				</a>
+
+			<a href="#" class="footer-link" id="facebook">
+				<i class="fa-brands fa-facebook"></i>
+			</a>
+
+			<a href="#" class="footer-link" id="twitter">
+				<i class="fa-brands fa-twitter"></i>
+			</a>
+			</div>
+		</div>
+		<ul class="footer-list">
+			<li>
+				<h3>Blog</h3>
+			</li>
+			<li>
+				<a href="#" class="footer-link">ajuda</a>
+			</li>
+
+			<li>
+				<a href="#" class="footer-link">Tech</a>
+			</li>
+
+			<li>
+				<a href="#" class="footer-link">blabla</a>
+			</li>
+
+
+		</ul>
+
+		<ul class="footer-list">
+			<li>
+				<h3>Produtos</h3>
+			</li>
+			<li>
+				<a href="#" class="footer-link">ajuda</a>
+			</li>
+
+			<li>
+				<a href="#" class="footer-link">Tech</a>
+			</li>
+
+			<li>
+				<a href="#" class="footer-link">blabla</a>
+			</li>
+
+
+		</ul>
+
+
+	 
+
+		
+
+		<div id="footer_cadastro">
+		<h3>Cadastre-se</h3>
+		<p>
+			dhgfjsdhghfeudj wesagyfgayw swgdfyuwag ryfgyewgf egfd 
+			eyfg yewfgyewgf efydgyegf ef 
+		</p>
+
+		<div id="input_group">
+			<input type="email" id="email"> 
+			<button>
+				<i class="fa-regular fa-envelope"></i>
+			</button>
+		</div>
+	</div>
+
+		<div id="footer_copyright">
+         &#169
+		 2023 all rights reserve
+          </div>
+		
+	</footer>
+
+
+	<script src="mobile-navbar.js"></script>
+
 </body>
+
 </html>
