--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>BoxPets</title>
-    
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+		integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+		crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link rel="stylesheet" href="style.css">
 
 
@@ -14,7 +16,7 @@
 </head>
 
 <body>
-	
+
 	<header>
 		<nav>
 			<a class="logo" href="">BoxPets</a>
@@ -33,7 +35,7 @@
 		</nav>
 	</header>
 	<section class=" home">
-		<div>
+		<div class="video-main">
 			<video class="video" src="video.mp4" autoplay muted loop></video>
 		</div>
 
@@ -46,9 +48,9 @@
 
 		</div>
 		<div class="media-icons">
-			<a href="#"><i class="fa-brands fa-instagram"></i> </a>
-			a href="#"><i class="fa-brands fa-facebook"></i> <
-			<a href="#"><i class="fab fa-twitter"></i>  </a>
+			<a href="#"><i class="fa-brands fa-instagram"></i></a>
+			<a href="#"><i class="fa-brands fa-facebook"></i></a>
+			<a href="#"><i class="fab fa-twitter"></i></a>
 		</div>
 
 	</section>
@@ -165,14 +167,12 @@
 
 	<!-- about -->
 	<section>
-
 		<div class="about" id="about">
 			<div class="about_main">
 				<div class="row">
 					<div class="image">
 						<img src="gatinhos.jpg">
 					</div>
-
 					<div class="about_text">
 						<h1><span>Adota</span>Pet</h1>
 						<h3>com todo o amor para vcocê</h3>
@@ -185,125 +185,124 @@
 						<a href="#" class="about_btn">Veja</a>
 					</div>
 				</div>
-
 			</div>
 	</section>
 
 	<!--card-->
 
 	<main class="cards">
-        <section class="card contact">
-            <div class="icon">
-                <img src="assets/Chat.png" alt="Contact us.">
-            </div>
-            <h3>Contact us.</h3>
-            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
-            <button>Learn More</button>
-        </section>
-        <section class="card shop">
-            <div class="icon">
-                <img src="assets/Bag.png" alt="Shop here.">
-            </div>
-            <h3>Shop here.</h3>
-            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
-            <button>Learn More</button>
-        </section>
-        <section class="card about">
-            <div class="icon">
-                <img src="assets/Play.png" alt="About us.">
-            </div>
-            <h3>About us.</h3>
-            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
-            <button>Learn More</button>
-        </section>
-    </main>
+		<section class="card contact">
+			<div class="icon">
+				<img src="assets/Chat.png" alt="Contact us.">
+			</div>
+			<h3>Contact us.</h3>
+			<span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+			<button>Learn More</button>
+		</section>
+		<section class="card shop">
+			<div class="icon">
+				<img src="assets/Bag.png" alt="Shop here.">
+			</div>
+			<h3>Shop here.</h3>
+			<span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+			<button>Learn More</button>
+		</section>
+		<section class="card about">
+			<div class="icon">
+				<img src="assets/Play.png" alt="About us.">
+			</div>
+			<h3>About us.</h3>
+			<span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+			<button>Learn More</button>
+		</section>
+	</main>
 
 	<!--footer-->
-	
+
 	<footer>
-		
+
 		<div id="footer_content">
 			<div id="footer_contacts">
 				<h1>logo</h1>
 				<p>Tudo aqui</p>
 
 				<div id="footer_midia">
-				<a href="#" class="footer-link" id="instagram">
-				<i class="fa-brands fa-instagram"></i>
-				</a>
+					<a href="#" class="footer-link" id="instagram">
+						<i class="fa-brands fa-instagram"></i>
+					</a>
 
-			<a href="#" class="footer-link" id="facebook">
-				<i class="fa-brands fa-facebook"></i>
-			</a>
+					<a href="#" class="footer-link" id="facebook">
+						<i class="fa-brands fa-facebook"></i>
+					</a>
 
-			<a href="#" class="footer-link" id="twitter">
-				<i class="fa-brands fa-twitter"></i>
-			</a>
+					<a href="#" class="footer-link" id="twitter">
+						<i class="fa-brands fa-twitter"></i>
+					</a>
+				</div>
 			</div>
-		</div>
-		<ul class="footer-list">
-			<li>
-				<h3>Blog</h3>
-			</li>
-			<li>
-				<a href="#" class="footer-link">ajuda</a>
-			</li>
+			<ul class="footer-list">
+				<li>
+					<h3>Blog</h3>
+				</li>
+				<li>
+					<a href="#" class="footer-link">ajuda</a>
+				</li>
 
-			<li>
-				<a href="#" class="footer-link">Tech</a>
-			</li>
+				<li>
+					<a href="#" class="footer-link">Tech</a>
+				</li>
 
-			<li>
-				<a href="#" class="footer-link">blabla</a>
-			</li>
-
-
-		</ul>
-
-		<ul class="footer-list">
-			<li>
-				<h3>Produtos</h3>
-			</li>
-			<li>
-				<a href="#" class="footer-link">ajuda</a>
-			</li>
-
-			<li>
-				<a href="#" class="footer-link">Tech</a>
-			</li>
-
-			<li>
-				<a href="#" class="footer-link">blabla</a>
-			</li>
+				<li>
+					<a href="#" class="footer-link">blabla</a>
+				</li>
 
 
-		</ul>
+			</ul>
+
+			<ul class="footer-list">
+				<li>
+					<h3>Produtos</h3>
+				</li>
+				<li>
+					<a href="#" class="footer-link">ajuda</a>
+				</li>
+
+				<li>
+					<a href="#" class="footer-link">Tech</a>
+				</li>
+
+				<li>
+					<a href="#" class="footer-link">blabla</a>
+				</li>
 
 
-	 
+			</ul>
 
-		
 
-		<div id="footer_cadastro">
-		<h3>Cadastre-se</h3>
-		<p>
-			dhgfjsdhghfeudj wesagyfgayw swgdfyuwag ryfgyewgf egfd 
-			eyfg yewfgyewgf efydgyegf ef 
-		</p>
 
-		<div id="input_group">
-			<input type="email" id="email"> 
-			<button>
-				<i class="fa-regular fa-envelope"></i>
-			</button>
-		</div>
-	</div>
 
-		<div id="footer_copyright">
-         &#169
-		 2023 all rights reserve
-          </div>
-		
+
+
+			<div id="footer_cadastro">
+				<h3>Cadastre-se</h3>
+				<p>
+					dhgfjsdhghfeudj wesagyfgayw swgdfyuwag ryfgyewgf egfd
+					eyfg yewfgyewgf efydgyegf ef
+				</p>
+
+				<div id="input_group">
+					<input type="email" id="email">
+					<button>
+						<i class="fa-regular fa-envelope"></i>
+					</button>
+				</div>
+			</div>
+
+			<div id="footer_copyright">
+				&#169
+				2023 all rights reserve
+			</div>
+
 	</footer>
 
 
