--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
 		integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="css/style.css">
 
 
 	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1">
@@ -36,7 +36,7 @@
 	</header>
 	<section class=" home">
 		<div class="video-main">
-			<video class="video" src="video.mp4" autoplay muted loop></video>
+			<video class="video" src="src/video.mp4" autoplay muted loop></video>
 		</div>
 
 		<div class="content">
@@ -60,7 +60,7 @@
 			<div class="card">
 				<div class="content">
 					<div class="imgBx">
-						<img src="BANHOTOSA.png">
+						<img src="src/BANHOTOSA.png">
 					</div>
 					<div class="contentBx">
 						<h3>Banho&tosa<br><span>Os melhores serviços</span></h3>
@@ -81,7 +81,7 @@
 			<div class="card">
 				<div class="content">
 					<div class="imgBx">
-						<img src="VETERINARIO.png">
+						<img src="src/VETERINARIO.png">
 					</div>
 					<div class="contentBx">
 						<h3>Veterinario<br><span>Happy Birthday</span></h3>
@@ -102,7 +102,7 @@
 			<div class="card">
 				<div class="content">
 					<div class="imgBx">
-						<img src="CRECHE.png">
+						<img src="src/CRECHE.png">
 					</div>
 					<div class="contentBx">
 						<h3>Creche<br><span>Happy Birthday</span></h3>
@@ -123,7 +123,7 @@
 			<div class="card">
 				<div class="content">
 					<div class="imgBx">
-						<img src="PASSEIO (2).png">
+						<img src="src/PASSEIO (2).png">
 					</div>
 					<div class="contentBx">
 						<h3>Veterinario<br><span>Happy Birthday</span></h3>
@@ -144,7 +144,7 @@
 			<div class="card">
 				<div class="content">
 					<div class="imgBx">
-						<img src="ADESTRAMENTO.png">
+						<img src="src/ADESTRAMENTO.png">
 					</div>
 					<div class="contentBx">
 						<h3>Veterinario<br><span>Happy Birthday</span></h3>
@@ -171,7 +171,7 @@
 			<div class="about_main">
 				<div class="row">
 					<div class="image">
-						<img src="gatinhos.jpg">
+						<img src="src/gatinhos.jpg">
 					</div>
 					<div class="about_text">
 						<h1><span>Adota</span>Pet</h1>
@@ -193,7 +193,7 @@
 	<main class="cards">
 		<section class="card contact">
 			<div class="icon">
-				<img src="assets/Chat.png" alt="Contact us.">
+				<img src="src/Chat.png" alt="Contact us.">
 			</div>
 			<h3>Contact us.</h3>
 			<span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
@@ -201,7 +201,7 @@
 		</section>
 		<section class="card shop">
 			<div class="icon">
-				<img src="assets/Bag.png" alt="Shop here.">
+				<img src="src/Bag.png" alt="Shop here.">
 			</div>
 			<h3>Shop here.</h3>
 			<span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
@@ -209,7 +209,7 @@
 		</section>
 		<section class="card about">
 			<div class="icon">
-				<img src="assets/Play.png" alt="About us.">
+				<img src="src/Play.png" alt="About us.">
 			</div>
 			<h3>About us.</h3>
 			<span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
@@ -230,11 +230,9 @@
 					<a href="#" class="footer-link" id="instagram">
 						<i class="fa-brands fa-instagram"></i>
 					</a>
-
 					<a href="#" class="footer-link" id="facebook">
 						<i class="fa-brands fa-facebook"></i>
 					</a>
-
 					<a href="#" class="footer-link" id="twitter">
 						<i class="fa-brands fa-twitter"></i>
 					</a>
@@ -247,16 +245,12 @@
 				<li>
 					<a href="#" class="footer-link">ajuda</a>
 				</li>
-
 				<li>
 					<a href="#" class="footer-link">Tech</a>
 				</li>
-
 				<li>
 					<a href="#" class="footer-link">blabla</a>
 				</li>
-
-
 			</ul>
 
 			<ul class="footer-list">
@@ -274,14 +268,7 @@
 				<li>
 					<a href="#" class="footer-link">blabla</a>
 				</li>
-
-
 			</ul>
-
-
-
-
-
 
 			<div id="footer_cadastro">
 				<h3>Cadastre-se</h3>
@@ -306,7 +293,7 @@
 	</footer>
 
 
-	<script src="mobile-navbar.js"></script>
+	<script src="js/mobile-navbar.js"></script>
 
 </body>
 
