--- a/index.html
+++ b/index.html
@@ -285,13 +285,10 @@
 				</div>
 			</div>
 
-			<div id="footer_copyright">
-				&#169
-				2023 all rights reserve
-			</div>
+				<p>&#169
+				2023 all rights reserve</p>
 
 	</footer>
-
 
 	<script src="js/mobile-navbar.js"></script>
 
