--- a/index.html
+++ b/index.html
@@ -188,33 +188,55 @@
 			</div>
 	</section>
 
+	<!--empresas-->
+	<div id="circle-shape-example">
+		<img src="src/CRECHE.png" alt="A photograph of sliced kiwifruit on a while plate" class="curve"><h1>KiwiFruit</h1>
+	  
+		<p>This is kiwifruit: originally called “yang tao”, “melonette” or Chinese gooseberry.
+			 Cultivated in its fuzzy variety from Chinese imports, the fruit proved popular with
+			  American military servicemen stationed in New Zealand during World War II, with 
+			  commercial export to the United States starting after the end of the war. 
+			  In California, the fruit was rebranded as “kiwifruit” due to its resemblance to New
+			   Zealand national bird. However, it is not a “kiwi”, which is also the demonym for 
+			   native New Zealanders. Saying “Im going to eat a kiwi” implies that you are either a 
+			   cannibal or planning to dine on an endangered flightless bird.
+	  </div>
+
+		
+
+
+
 	<!--card-->
 
 	<main class="cards">
+
 		<section class="card contact">
 			<div class="icon">
-				<img src="src/Chat.png" alt="Contact us.">
+				<img src="src/tipos.png" alt="Contact us.">
 			</div>
-			<h3>Contact us.</h3>
+			<h3>Agenda virtual.</h3>
 			<span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
 			<button>Learn More</button>
 		</section>
+
 		<section class="card shop">
 			<div class="icon">
-				<img src="src/Bag.png" alt="Shop here.">
+				<img src="src/tipos.png" alt="Shop here.">
 			</div>
-			<h3>Shop here.</h3>
+			<h3>Carterinha pet.</h3>
 			<span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
 			<button>Learn More</button>
 		</section>
-		<section class="card about">
+
+		<section class="card slim">
 			<div class="icon">
-				<img src="src/Play.png" alt="About us.">
+				<img src="src/tipos.png" alt="Shop here.">
 			</div>
-			<h3>About us.</h3>
+			<h3>Carterinha pet.</h3>
 			<span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
 			<button>Learn More</button>
 		</section>
+
 	</main>
 
 	<!--footer-->
@@ -285,12 +307,13 @@
 				</div>
 			</div>
 
-				<p>&#169
+			<p>&#169
 				2023 all rights reserve</p>
 
 	</footer>
 
 	<script src="js/mobile-navbar.js"></script>
+	<script src="js/empresas.js"></script>
 
 </body>
 
