--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/nav-bar.css">
 
 
 	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1">
