--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 	<header>
 		<nav>
-			<a class="logo" href="">BoxPets</a>
+			<a class="logo" href="#">BoxPets</a>
 			<div class="mobile-menu">
 				<div class="line1"></div>
 				<div class="line2"></div>
