--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>BoxPets</title>
+
+
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
 		integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/nav-bar.css">
 
@@ -21,7 +26,7 @@
 
 	<header>
 		<nav>
-			<a class="logo" href="#">BoxPets</a>
+			<a class="logo" href="index.html">BoxPets</a>
 			<div class="mobile-menu" data-bs-toggle="offcanvas" href="#menu" role="button" aria-controls="offcanvasExample">
 				<div class="line1"></div>
 				<div class="line2"></div>
@@ -29,7 +34,7 @@
 
 			</div>
 			<ul class="nav-list">
-				<li><a href="#">Inicio</a></li>
+				<li><a href="empresas1.html">Inicio</a></li>
 				<li><a href="#">Empresa</a></li>
 				<li><a href="#">Ongs</a></li>
 				<li><a href="#">Ajuda</a></li>
