--- a/empresas1.html
+++ b/empresas1.html
@@ -7,6 +7,10 @@
     <title>BoxPets</title>
 
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,500;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
@@ -57,21 +61,21 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="src/empresa.jpg" class="d-block w-100" alt="...">
+            <img src="src/img1.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>First slide label</h5>
               <p>Some representative placeholder content for the first slide.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="src/servidores.jpeg" class="d-block w-100" alt="...">
+            <img src="src/img2.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Second slide label</h5>
               <p>Some representative placeholder content for the second slide.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="src/tipos.png" class="d-block w-100" alt="...">
+            <img src="src/img3.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Third slide label</h5>
               <p>Some representative placeholder content for the third slide.</p>
@@ -91,34 +95,268 @@
 
        <!--Serviços em destaques-->
 
-       <div class="card-group">
-        <div class="card">
-          <img src="src/ADESTRAMENTO.png" class="card-img-top" alt="...">
+       <div class="card-group  grupo">
+        <div class="card carta">
+          <img src="src/Banho e Tosa.png" class="card-img-top  propaganda" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
           </div>
         </div>
-        <div class="card">
-          <img src="src/BANHOTOSA.png" class="card-img-top" alt="...">
+        <div class="card carta">
+          <img src="src/creche (1).png" class="card-img-top propaganda" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
           </div>
         </div>
-        <div class="card">
-          <img src="src/CRECHE.png" class="card-img-top" alt="...">
+        <div class="card carta">
+          <img src="src/ongs.png" class="card-img-top propaganda" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
           </div>
+        </div>
+      <!-- fim Serviços em destaques-->
+
+      <!--comentarios-->
+
+      <section  id="testimonials">
+        <div class="testimonial-heading">
+          <span>Melhores avaliações</span>
+          <h1>confira</h1>
+ </div>
+ <div class="testimonial-box-container">
+  <div class="testimonial-box">
+    <div class="box-top">
+      <div class="profile">
+        <div class="profile-img">
+          <img src="src/pessoa-og.webp" alt="estrelas">
+        </div>
+
+        <div class="name-user">
+            <p><strong>Camis Araújo</strong></p>
+            <span>@camisk</span>
         </div>
       </div>
 
-        <!-- fim Serviços em destaques-->
+        <div class="reviews">
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+        </div>
+       </div>
+
+       <div class="client-comment">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique aut ab nostrum blanditiis
+           eligendi officiis doloremque? Aperiam enim laboriosam saepe dicta distinctio. 
+           Eum ab debitis vel doloremque illo molestias odio!</p>
+
+    </div>
+
+  </div>
+
+  <div class="testimonial-box">
+    <div class="box-top">
+      <div class="profile">
+        <div class="profile-img">
+          <img src="src/pessoa-og.webp" alt="estrelas">
+        </div>
+
+        <div class="name-user">
+            <p><strong>Camis Araújo</strong></p>
+            <span>@camisk</span>
+        </div>
+      </div>
+
+        <div class="reviews">
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+        </div>
+       </div>
+
+       <div class="client-comment">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique aut ab nostrum blanditiis
+           eligendi officiis doloremque? Aperiam enim laboriosam saepe dicta distinctio. 
+           Eum ab debitis vel doloremque illo molestias odio!</p>
+
+    </div>
+
+  </div>
+
+  <div class="testimonial-box">
+    <div class="box-top">
+      <div class="profile">
+        <div class="profile-img">
+          <img src="src/pessoa-og.webp" alt="estrelas">
+        </div>
+
+        <div class="name-user">
+            <p><strong>Camis Araújo</strong></p>
+            <span>@camisk</span>
+        </div>
+      </div>
+
+        <div class="reviews">
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+        </div>
+       </div>
+
+       <div class="client-comment">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique aut ab nostrum blanditiis
+           eligendi officiis doloremque? Aperiam enim laboriosam saepe dicta distinctio. 
+           Eum ab debitis vel doloremque illo molestias odio!</p>
+
+    </div>
+
+  </div>
+
+
+  <div class="testimonial-box">
+    <div class="box-top">
+      <div class="profile">
+        <div class="profile-img">
+          <img src="src/pessoa-og.webp" alt="estrelas">
+        </div>
+
+        <div class="name-user">
+            <p><strong>Camis Araújo</strong></p>
+            <span>@camisk</span>
+        </div>
+      </div>
+
+        <div class="reviews">
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+        </div>
+       </div>
+
+       <div class="client-comment">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique aut ab nostrum blanditiis
+           eligendi officiis doloremque? Aperiam enim laboriosam saepe dicta distinctio. 
+           Eum ab debitis vel doloremque illo molestias odio!</p>
+
+    </div>
+  </div>
+ </div>
+      </section>
+ <!--fim de comentario-->
+
+
+ <!--maps-->
+
+ <div class="row g-0 bg-body-secondary position-relative maps ">
+  <div class="col-md-6 mb-md-0 p-md-4">
+    <img src="src/maps.jpeg" class="w-100  tamanho-maps" alt="...">
+  </div>
+
+ <!--fim do maps-->
+  <!--form-->
+
+   
+  
+<!--fim do form-->
+<div class="mb-3">
+  <label for="exampleFormControlInput1" class="form-label">Email address</label>
+  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+</div>
+<div class="mb-3">
+  <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+</div>
+ 
+ 
+ <!-- footer-->
+
+ <footer>
+
+  <div id="footer_content">
+    <div id="footer_contacts">
+      <h1>logo</h1>
+      <p>Tudo aqui</p>
+
+      <div id="footer_midia">
+        <a href="#" class="footer-link" id="instagram">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a href="#" class="footer-link" id="facebook">
+          <i class="fa-brands fa-facebook"></i>
+        </a>
+        <a href="#" class="footer-link" id="twitter">
+          <i class="fa-brands fa-twitter"></i>
+        </a>
+      </div>
+    </div>
+    <ul class="footer-list">
+      <li>
+        <h3>Blog</h3>
+      </li>
+      <li>
+        <a href="#" class="footer-link">ajuda</a>
+      </li>
+      <li>
+        <a href="#" class="footer-link">Tech</a>
+      </li>
+      <li>
+        <a href="#" class="footer-link">blabla</a>
+      </li>
+    </ul>
+
+    <ul class="footer-list">
+      <li>
+        <h3>Produtos</h3>
+      </li>
+      <li>
+        <a href="#" class="footer-link">ajuda</a>
+      </li>
+
+      <li>
+        <a href="#" class="footer-link">Tech</a>
+      </li>
+
+      <li>
+        <a href="#" class="footer-link">blabla</a>
+      </li>
+    </ul>
+
+    <div id="footer_cadastro">
+      <h3>Cadastre-se</h3>
+      <p>
+        dhgfjsdhghfeudj wesagyfgayw swgdfyuwag ryfgyewgf egfd
+        eyfg yewfgyewgf efydgyegf ef
+      </p>
+
+      <div id="input_group">
+        <input type="email" id="email">
+        <button>
+          <i class="fa-regular fa-envelope"></i>
+        </button>
+      </div>
+    </div>
+
+    <p>&#169
+      2023 all rights reserve</p>
+
+     
+
+
+<!-- fim do footer-->
+
 
         <script src="js/mobile-navbar.js"></script>
 </body>
