--- a/empresas1.html
+++ b/empresas1.html
@@ -169,8 +169,8 @@
         </div>
 
         <div class="name-user">
-            <p><strong>Camis Araújo</strong></p>
-            <span>@camisk</span>
+            <p><strong>Eloisa Morais</strong></p>
+            <span>@lolo.M</span>
         </div>
       </div>
 
