--- a/empresas1.html
+++ b/empresas1.html
@@ -126,7 +126,7 @@
 
       <section  id="testimonials">
         <div class="testimonial-heading">
-          <span>Melhores avaliações</span>
+          <span>Melhores avaliação</span>
           <h1>confira</h1>
  </div>
  <div class="testimonial-box-container">
