--- a/empresas1.html
+++ b/empresas1.html
@@ -120,6 +120,7 @@
             <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
           </div>
         </div>
+       </div>
       <!-- fim Serviços em destaques-->
 
       <!--comentarios-->
