--- a/empresas1.html
+++ b/empresas1.html
@@ -272,7 +272,7 @@
    
   
 <!--fim do form-->
-<div class="mb-3">
+<div class="mb-3 form">
   <label for="exampleFormControlInput1" class="form-label">Email address</label>
   <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
 </div>
