--- a/empresas1.html
+++ b/empresas1.html
@@ -95,8 +95,9 @@
 
        <!--Serviços em destaques-->
 
-       <div class="card-group  grupo">
-        <div class="card carta">
+       <div class="card-group">
+        <div class="card" style="
+        height: 100%;">
           <img src="src/Banho e Tosa.png" class="card-img-top  propaganda" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -104,7 +105,8 @@
             <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
           </div>
         </div>
-        <div class="card carta">
+        <div class="card" style="
+        height: 100%;">
           <img src="src/creche (1).png" class="card-img-top propaganda" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -112,7 +114,8 @@
             <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
           </div>
         </div>
-        <div class="card carta">
+        <div class="card" style="
+        height: 100%;">
           <img src="src/ongs.png" class="card-img-top propaganda" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -269,18 +272,25 @@
  <!--fim do maps-->
   <!--form-->
 
-   
+  <form style="width: 50%;">
+    <div class="mb-3">
+      <label for="exampleInputEmail1" class="form-label">Email address</label>
+      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+      <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+    </div>
+    <div class="mb-3">
+      <label for="exampleInputPassword1" class="form-label">Password</label>
+      <input type="password" class="form-control" id="exampleInputPassword1">
+    </div>
+    <div class="mb-3 form-check">
+      <input type="checkbox" class="form-check-input" id="exampleCheck1">
+      <label class="form-check-label" for="exampleCheck1">Check me out</label>
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
   
 <!--fim do form-->
-<div class="mb-3 form">
-  <label for="exampleFormControlInput1" class="form-label">Email address</label>
-  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-</div>
-<div class="mb-3">
-  <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
-  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-</div>
- 
+
  
  <!-- footer-->
 
