--- a/empresas1.html
+++ b/empresas1.html
@@ -96,7 +96,7 @@
        <!--Serviços em destaques-->
 
        <div class="card-group  grupo">
-        <div class="card carta">
+        <div class="card carta "style="    height: 100%;">
           <img src="src/Banho e Tosa.png" class="card-img-top  propaganda" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -104,7 +104,7 @@
             <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
           </div>
         </div>
-        <div class="card carta">
+        <div class="card carta "style="    height: 100%;">
           <img src="src/creche (1).png" class="card-img-top propaganda" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -112,7 +112,7 @@
             <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
           </div>
         </div>
-        <div class="card carta">
+        <div class="card carta "style="    height: 100%;">
           <img src="src/ongs.png" class="card-img-top propaganda" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -258,28 +258,36 @@
       </section>
  <!--fim de comentario-->
 
-
+<div class="subpe">
  <!--maps-->
-
- <div class="row g-0 bg-body-secondary position-relative maps ">
-  <div class="col-md-6 mb-md-0 p-md-4">
-    <img src="src/maps.jpeg" class="w-100  tamanho-maps" alt="...">
-  </div>
+<div class="maps "style="    ">
+ <iframe  src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14631.28823451718!2d-46.91254099999999!3d-23.5389016!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1697591981314!5m2!1spt-BR!2sbr" 
+width="450" height="450" style="border: 2px;;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</div>
 
  <!--fim do maps-->
-  <!--form-->
-
-   
+  <!--form--> 
+  <form class="form">
+    <div class="mb-3">
+      <title> Mande seu feedback</title>
+      <label for="exampleInputEmail1" class="form-label">Email address</label>
+      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+      <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+    </div>
+    <div class="mb-3">
+      <label for="exampleInputPassword1" class="form-label">Password</label>
+      <input type="password" class="form-control" id="exampleInputPassword1">
+    </div>
+    <div class="mb-3 form-check">
+      <input type="checkbox" class="form-check-input" id="exampleCheck1">
+      <label class="form-check-label" for="exampleCheck1">Check me out</label>
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+</div>
   
 <!--fim do form-->
-<div class="mb-3 form">
-  <label for="exampleFormControlInput1" class="form-label">Email address</label>
-  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-</div>
-<div class="mb-3">
-  <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
-  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-</div>
+
  
  
  <!-- footer-->
