--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/nav-bar.css">
+	<link rel="stylesheet" href="css/barra-empresa.css">
 
 
 	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1">
@@ -199,20 +200,39 @@
 	</section>
 
 	<!--empresas-->
-	<div id="circle-shape-example">
-		<img src="src/CRECHE.png" alt="A photograph of sliced kiwifruit on a while plate" class="curve">
-		<h1>KiwiFruit</h1>
+	<canvas class="orb-canvas"></canvas>
+<!-- Overlay -->
+<div class="overlay">
+  <!-- Overlay inner wrapper -->
+  <div class="overlay__inner">
+    <!-- Title -->
+    <h1 class="overlay__title">
+      Seja um parceiro da Boxpet,
+      <span class="text-gradient">investimenta</span> no seu negocio
+    </h1>
+    <!-- Description -->
+    <p class="overlay__description">
+     Aqui na Boxpet damos a oportunidade para que sua empresa possa crescer com a gente,
+     seja ela grande ou pequena, terá um lugar especial na Boxpet.
+      <strong>Venha fazer parte você também.</strong>
+    </p>
+    <!-- Buttons -->
+    <div class="overlay__btns">
 
-		<p>This is kiwifruit: originally called “yang tao”, “melonette” or Chinese gooseberry.
-			Cultivated in its fuzzy variety from Chinese imports, the fruit proved popular with
-			American military servicemen stationed in New Zealand during World War II, with
-			commercial export to the United States starting after the end of the war.
-			In California, the fruit was rebranded as “kiwifruit” due to its resemblance to New
-			Zealand national bird. However, it is not a “kiwi”, which is also the demonym for
-			native New Zealanders. Saying “Im going to eat a kiwi” implies that you are either a
-			cannibal or planning to dine on an endangered flightless bird.
-	</div>
+      <button class="overlay__btn overlay__btn--transparent">
+        <a href="" target="_blank">
 
+          Saiba mais
+        </a>
+      </button>
+
+      <button class="overlay__btn overlay__btn--colors">
+        <span>Entrar como empresa </span>
+        <span class="overlay__btn-emoji">🎨</span>
+      </button>
+    </div>
+  </div>
+</div>
 
 
 
