--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/nav-bar.css">
-	<link rel="stylesheet" href="css/barra-empresa.css">
+	<link rel="stylesheet" href="css/footer.css">
+	<!--<link rel="stylesheet" href="css/index-barra-empresa.css"> está interferindo a barra menu-->
+
 
 
 	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1">
@@ -69,6 +71,7 @@
 	<section>
 		<div class="container-fluid">
 			<div class="card">
+				<a href="servico.html">
 				<div class="content">
 					<div class="imgBx">
 						<img src="src/BANHOTOSA.png">
@@ -88,6 +91,7 @@
 						<a href="">outros</a>
 					</li>
 				</ul>
+			</a>
 			</div>
 			<div class="card">
 				<div class="content">
