--- a/empresas1.html
+++ b/empresas1.html
@@ -25,7 +25,7 @@
     crossorigin="anonymous"></script>
 
   <link rel="stylesheet" href="css/empresa1.css">
-
+<link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/nav-bar.css">
 
